--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -1,6 +1,8 @@
 <section class="menu">
     <header class="menu__header">
-        <img src="../assets/images/vector.png">
+       <div class="menu__image">
+         <img src="../assets/images/arg-programa.png">
+       </div>
         <h3 class="menu__title">{{miPorfolio.nombre}}</h3>
     </header>
     <nav>
