--- a/src/app/componentes/skills/skills.component.html
+++ b/src/app/componentes/skills/skills.component.html
@@ -6,6 +6,7 @@
                 <li class="skills__img"><img src="../assets/images/htlm.png"></li>
                 <li class="skills__name"> HTML 5</li>
             </ul>
+            <mat-progress-bar mode="determinate" value="90" color="Primary"></mat-progress-bar>
         </div>
 
         <div class="skills__box">
@@ -13,6 +14,7 @@
                 <li class="skills__img"> <img src="../assets/images/js_icon.png" alt=""></li>
                 <li class="skills__name">Javascript</li>
             </ul>
+            <mat-progress-bar mode="determinate" value="70"></mat-progress-bar>
         </div>
 
         <div class="skills__box">
@@ -20,6 +22,7 @@
                 <li class="skills__img"> <img src="../assets/images/php_icon.png" alt=""></li>
                 <li class="skills__name">PHP</li>
             </ul>
+            <mat-progress-bar mode="determinate" value="30"></mat-progress-bar>
         </div>
 
         <div class="skills__box">
@@ -27,6 +30,7 @@
                 <li class="skills__img"><img src="../assets/images/nodejs_icon.png" alt=""></li>
                 <li class="skills__name">Node JS</li>
             </ul>
+            <mat-progress-bar mode="determinate" value="40"></mat-progress-bar>
         </div>
 
         <div class="skills__box">
@@ -34,6 +38,7 @@
                 <li class="skills__img"> <img src="../assets/images/react_icon.png" alt=""> </li>
                 <li class="skills__name">React</li>
             </ul>
+            <mat-progress-bar mode="determinate" value="50"></mat-progress-bar>
         </div>
 
         <div class="skills__box">
@@ -41,6 +46,7 @@
                 <li class="skills__img"> <img src="../assets/images/css_icon.png" alt=""> </li>
                 <li class="skills__name">CSS</li>
             </ul>
+            <mat-progress-bar mode="determinate" value="70"></mat-progress-bar>
         </div>
     </div>
     <div class="icon">
