--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-@import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
 :root {
-  --cor-de-fondo: #F0E9D2;
+  --cor-de-fondo:#ffffff;
   --cor-de-link: #000;
   --cor-de-cards: linear-gradient(-131deg, #FCDFE7 0%, #FFE4C7 100%);
 
@@ -441,3 +440,6 @@ template {
 [hidden] {
  display: none;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
