--- a/src/app/componentes/profile/profile.component.html
+++ b/src/app/componentes/profile/profile.component.html
@@ -9,15 +9,31 @@
             </div>
             <ul class="title__network">
                 <!-- Enlaces de redes sociales -->
-                <li class="title__network__item"><a href="https://github.com/Leangon" target="_blank">Github <img src="../assets/images/arrow.png"> </a></li>
-                <li class="title__network__item"><a href="https://www.linkedin.com/in/leandro-gonza/" target="_blank">Linkedin <img src="../assets/images/arrow.png"></a></li>
-                <li class="title__network__item"><a href="https://www.instagram.com/leamgonza/" target="_blank">Instagram <img src="../assets/images/arrow.png"></a></li>
-                <li class="title__network__item"><a href="./assets/Leandro González.pdf" target="_blank">Resumen CV <img src="../assets/images/arrow.png"></a></li>
+                <li class="title__network__item">
+                    <a href="https://github.com/Leangon" target="_blank">Github <img src="../assets/images/arrow.png"> 
+                    </a>
+                </li>
+                <li class="title__network__item">
+                    <a href="https://www.linkedin.com/in/leandro-gonza/" target="_blank">Linkedin 
+                        <img src="../assets/images/arrow.png">
+                    </a>
+                </li>
+                <li class="title__network__item">
+                    <a href="https://www.instagram.com/leamgonza/" target="_blank">Instagram
+                        <img src="../assets/images/arrow.png">
+                    </a>
+                </li>
+                <li class="title__network__item">
+                    <a href="./assets/Leandro González.pdf" target="_blank">Resumen CV
+                        
+                        <img src="../assets/images/arrow.png">
+                    </a>
+                </li>
             </ul>
         </div>
         
         <div class="title__img">
-            <img class="title__profile" src="../assets/images/lea.jpg">
+            <img class="title__profile" [src]="miPorfolio.image">
             <div class="icon">
                 <i class="fa-solid fa-pen"></i>
                 <i class="fa-solid fa-trash"></i>
