--- a/src/app/componentes/menu/menu.component.css
+++ b/src/app/componentes/menu/menu.component.css
@@ -21,6 +21,22 @@
 .menu__title{
     margin-left: 0.6rem;
     margin-bottom: 0;
+    display: block;
+   
+    white-space: nowrap;
+    border-right: 2px solid;
+    width: 17ch;
+
+    animation: typing 3s steps(17) infinite, blink .5s infinite alternate;
+    overflow: hidden;
+}
+
+@keyframes typing {
+    from {width: 0}
+}
+
+@keyframes blink {
+    50% {border-color: transparent;}
 }
 
 .menu__list{
