--- a/src/app/componentes/skills/skills.component.css
+++ b/src/app/componentes/skills/skills.component.css
@@ -37,6 +37,10 @@
     padding: 0.4rem;
 }
 
+.logo{
+    width: 64px;
+    height: 64px;
+}
 
 @media screen and (max-width: 768px) {
     .skills, .hobbies{
