se agrego las cards de la experiencia labural mas visuales

--- a/src/app/componentes/about-me/about-me.component.html
+++ b/src/app/componentes/about-me/about-me.component.html
@@ -1,5 +1,5 @@
 <section class="about" id="sobre-mi">
-    <div class="about__container">
+    <div class="about__container" *ngIf="miPorfolio">
         <h3 class="about__title">Sobre mi</h3>
         <p class="about__paragraph">{{miPorfolio.about.p1}}</p>
         <p class="about__paragraph">{{miPorfolio.about.p2}}</p>
