--- a/src/app/componentes/menu/menu.component.css
+++ b/src/app/componentes/menu/menu.component.css
@@ -1,5 +1,8 @@
 /*Sección Menu*/
-
+a{
+    text-decoration: none;
+    color: var(--cor-de-link);
+}
 .menu{
     display: flex;
     align-items: center;
