--- a/src/app/componentes/profile/profile.component.html
+++ b/src/app/componentes/profile/profile.component.html
@@ -1,5 +1,5 @@
 <section class="title">
-    <div class="title__div">
+    <div class="title__div" *ngIf="miPorfolio">
         <div class="title__container">
             <h2 class="title__bio">{{miPorfolio.titulo}}</h2>
             <h3 class="title__subsection">{{miPorfolio.discription}}</h3>
