--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,5 +1,9 @@
 <div mat-dialog-content>
   <form [formGroup]="form" (ngSubmit)="onEnviar($event)">
+
+    <div>
+      <h2>Inicio de sesión</h2>
+    </div>
     <div>
       <label for="email">Email: </label>
       <input type="email" formControlName="email" class="form-control">
