Se agrego carrusel para la presentación de los proyectos

--- a/src/app/componentes/footer/footer.component.css
+++ b/src/app/componentes/footer/footer.component.css
@@ -1,6 +1,8 @@
 .footer__rodape{
     padding: 2rem;
     text-align: center;
-    width: 300px;
+    /* width: 300px; */
     margin: auto;
+    background: #111;
+    color: #fff;
 }
