--- a/src/app/componentes/footer/footer.component.html
+++ b/src/app/componentes/footer/footer.component.html
@@ -1,6 +1,6 @@
 <section class="footer">
     <footer class="footer__rodape">
         <p>Desarrollado por leamgon</p>
-        <p>2022</p>
+        <p>Copyright © <span id="year"></span> <a href="#"></a> </p>
     </footer>
 </section>
