--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -7,12 +7,12 @@
     </header>
     <nav>
         <ul class="menu__list">
-            <li class="menu__list__item"><a href="#sobre-mi">Sobre mi</a></li>
+            <li class="menu__list__item"><a href="#sobre-mi">About me</a></li>
             <li class="menu__list__item"><a href="#skills">Skills</a></li>
-            <li class="menu__list__item"><a href="#formacion">Formación</a></li>
-            <li class="menu__list__item"><a href="#xp">Proyectos</a></li>
-            <li class="menu__list__item"><a href="#contacto">Contacto</a></li>
-            <li class="menu__list__item log"><button mat-button (click)="openDialog()">Iniciar sesión</button></li>
+            <li class="menu__list__item"><a href="#formacion">Training</a></li>
+            <li class="menu__list__item"><a href="#xp">Proyects</a></li>
+            <li class="menu__list__item"><a href="#contacto">Contact</a></li>
+            <li class="menu__list__item log"><button class="btn btn-outline-primary" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;" mat-button (click)="openDialog()">Log in</button></li>
         </ul>
     </nav>
 </section>
