--- a/src/app/componentes/skills/skills.component.css
+++ b/src/app/componentes/skills/skills.component.css
@@ -1,11 +1,9 @@
-/** Seccion skill
-/** Sección Hobbies*/
+/** Seccion skill */
 
 .skills, .hobbies{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    /* align-items: center; */
     width: 70%;
     margin: 0 auto;
     gap: 1rem;
