--- a/src/app/componentes/profile/profile.component.css
+++ b/src/app/componentes/profile/profile.component.css
@@ -20,16 +20,21 @@
 }
 
 .title__subsection{
-    font-style: normal;
-    font-weight: 400;
-    font-size: 1.3rem;
-    line-height: 26px;
+    font-size: 1.1rem;
 }
 
 .title__network{
     display: flex;
-    gap: 2rem;
+    gap: 4rem;
     padding: 0;
+    margin-bottom: 0;
+}
+
+a{
+    text-decoration: none;
+    color: var(--cor-de-link);
+    font-size: 1.5rem;
+    color: #7286D3;
 }
 
 .title__profile{
@@ -37,11 +42,11 @@
     border-radius: 50%;
 }
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+@media screen and (max-width: 1000px) {
+    .title__profile {
+     width: 200px;
+    }
+}
 
 @media screen and (max-width: 768px) {
    .title__container{
@@ -68,7 +73,6 @@
 @media screen and (max-width: 425px) {
     .title__div{
         flex-direction: column;
-        
         align-items: flex-start;
     }
 
