--- a/src/app/componentes/projects/projects.component.html
+++ b/src/app/componentes/projects/projects.component.html
@@ -1,123 +1,116 @@
 <section class="experience" id="xp">
-    <h2 class="experience__section__title">Proyectos</h2>
-    <div class="experience__box">
-        <!-- Agregar logo/captura de pantalla del proyecto -->
-        <img class="experience__img" src="../assets/images/decod_print.png">
-        <div class="experience__info">
-            <h2 class="experience__title">Encriptador de texto</h2>
-            <h3 class="experience__text">Challenge Alura Codificador </h3>
-            <div class="experience__description">
-                <!-- Enlace del proyecto en Github o GithubPages -->
-                <span class="experience__repo"><a
-                        href="https://github.com/alura-challenges/challenge-one-encriptador-latam" target = _blank ><button
-                            class="experience__boton--repo">Repositório</button></a></span>
-                <span class="experience__demo"><a href="" target = _blank ><button class="experience__boton--demo">Ver
-                            demo</button></a></span>
-            </div>
-        </div>
-    </div>
+    <h2 class="experience__section__title">Proyects</h2>
 
-    <div class="experience__box">
-        <!-- Agregar logo/captura de pantalla de tu proyecto -->
-        <img class="experience__img" src="../assets/images/forca_print.png">
-        <div class="experience__info container">
-            <h2 class="experience__title">Juego creado con HTML y JavaScript</h2>
-            <h3 class="experience__text">Challenge Oracle </h3>
-            <div class="experience__description">
-                <!-- Enlace del proyecto en Github o GithubPages -->
-                <span class="experience__repo"><a
-                        href="https://github.com/alura-challenges/challenge-one-juego-ahorcado" target = _blank ><button
-                            class="experience__boton--repo">Repositório</button></a></span>
-                <span class="experience__demo"><a href="" target = _blank ><button class="experience__boton--demo">Ver
-                            demo</button></a></span>
-            </div>
-        </div>
-    </div>
-
-    <div class="experience__box">
-        <!-- Agregar logo/captura de pantalla de tu proyecto -->
-        <img class="experience__img" src="../assets/images/secretcode_print.png">
-        <div class="experience__info">
-            <h2 class="experience__title">Encriptador de texto</h2>
-            <h3 class="experience__text">Challenge Oracle </h3>
-            <div class="experience__description">
-                <!-- Enlace del proyecto en Github o GithubPages -->
-                <span class="experience__repo"><a href="https://github.com/Leangon/Encriptador-de-texto" target = _blank ><button
-                            class="experience__boton--repo">Repositório</button></a></span>
-                <span class="experience__demo"><a href="https://leangon.github.io/Encriptador-de-texto/" target = _blank ><button
-                            class="experience__boton--demo">Ver demo</button></a></span>
-            </div>
-        </div>
-    </div>
-
-    <div class="experience__box">
-        <img class="experience__img" src="../assets/images/forca2_print.png">
-        <div class="experience__info container">
-            <h2 class="experience__title">Juego creado con HTML, CSS y JavaScript</h2>
-            <h3 class="experience__text">Challenge Oracle </h3>
-            <div class="experience__description">
-                <!-- Enlace del proyecto en Github o GithubPages -->
-                <span class="experience__repo"><a
-                        href="https://github.com/alura-challenges/challenge-one-juego-ahorcado" target = _blank ><button
-                            class="experience__boton--repo">Repositório</button></a></span>
-                <span class="experience__demo"><a href="" target = _blank ><button class="experience__boton--demo">Ver
-                            demo</button></a></span>
-            </div>
-        </div>
-
-    </div>
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="../assets/images/argentina-programa.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="../assets/images/forca2_print.png" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="../assets/images/forca_print.png" class="d-block w-100" alt="...">
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-
-    <div id="carouselExampleIndicators" class="carousel slide">
+    <div id="carouselExampleIndicators" class="carousel carousel-dark slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+          aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+          aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+          aria-label="Slide 4"></button>
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../assets/images/argentina-programa.jpg" class="d-block w-100" alt="...">
+          <div class="experience__box">
+            <!-- Agregar logo/captura de pantalla del proyecto -->
+            <img class="experience__img" src="../assets/images/decod_print.png">
+            <div class="experience__info">
+              <h2 class="experience__title">Encriptador de texto</h2>
+              <h3 class="experience__text">Challenge Alura Codificador </h3>
+              <div class="experience__description">
+                <!-- Enlace del proyecto en Github o GithubPages -->
+                <span class="experience__repo"><a
+                    href="https://github.com/alura-challenges/challenge-one-encriptador-latam" target=_blank><button
+                      class="experience__boton--repo">Repositório</button></a></span>
+                <span class="experience__demo"><a href="" target=_blank><button class="experience__boton--demo">Ver
+                      demo</button></a></span>
+              </div>
+            </div>
+          </div>
         </div>
+
         <div class="carousel-item">
-          <img src="../assets/images/forca2_print.png" class="d-block w-100" alt="...">
+          <div class="experience__box">
+            <!-- Agregar logo/captura de pantalla de tu proyecto -->
+            <img class="experience__img" src="../assets/images/forca_print.png">
+            <div class="experience__info">
+              <h2 class="experience__title">Juego creado con HTML y JavaScript</h2>
+              <h3 class="experience__text">Challenge Oracle </h3>
+              <div class="experience__description">
+                <!-- Enlace del proyecto en Github o GithubPages -->
+                <span class="experience__repo"><a
+                    href="https://github.com/alura-challenges/challenge-one-juego-ahorcado" target=_blank><button
+                      class="experience__boton--repo">Repositório</button></a></span>
+                <span class="experience__demo"><a href="" target=_blank><button class="experience__boton--demo">Ver
+                      demo</button></a></span>
+              </div>
+            </div>
+          </div>
         </div>
+
         <div class="carousel-item">
-          <img src="../assets/images/forca_print.png" class="d-block w-100" alt="...">
+          <div class="experience__box">
+            <!-- Agregar logo/captura de pantalla de tu proyecto -->
+            <img class="experience__img" src="../assets/images/secretcode_print.png">
+            <div class="experience__info">
+              <h2 class="experience__title">Encriptador de texto</h2>
+              <h3 class="experience__text">Challenge Oracle </h3>
+              <div class="experience__description">
+                <!-- Enlace del proyecto en Github o GithubPages -->
+                <span class="experience__repo"><a href="https://github.com/Leangon/Encriptador-de-texto"
+                    target=_blank><button class="experience__boton--repo">Repositório</button></a></span>
+                <span class="experience__demo"><a href="https://leangon.github.io/Encriptador-de-texto/"
+                    target=_blank><button class="experience__boton--demo">Ver demo</button></a></span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <div class="experience__box">
+            <!-- Agregar logo/captura de pantalla del proyecto -->
+            <img class="experience__img" src="../assets/images/forca2_print.png">
+            <div class="experience__info">
+              <h2 class="experience__title">Juego creado con HTML, CSS y JavaScript</h2>
+              <h3 class="experience__text">Challenge Oracle </h3>
+              <div class="experience__description">
+                <!-- Enlace del proyecto en Github o GithubPages -->
+                <span class="experience__repo"><a
+                    href="https://github.com/alura-challenges/challenge-one-juego-ahorcado" target=_blank><button
+                      class="experience__boton--repo">Repositório</button></a></span>
+                <span class="experience__demo"><a href="" target=_blank><button class="experience__boton--demo">Ver
+                      demo</button></a></span>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
         <span class="visually-hidden">Previous</span>
       </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
+    </div>
+
+    <div>
+      <div class="icon">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+          <path
+            d="M497.938 74.159L437.847 14.063C428.473 4.688 416.176 0 403.88 0S379.287 4.688 369.913 14.063L31.038 352.955C28.804 355.189 27.28 358.033 26.663 361.131L0.321 492.853C-1.707 502.966 6.16 512 15.949 512C16.996 512 18.066 511.896 19.148 511.68L150.857 485.335C153.954 484.716 156.798 483.194 159.032 480.962L497.938 142.084C516.687 123.317 516.687 92.91 497.938 74.159ZM147.72 469.645L16.007 495.992L42.35 364.27L309.646 96.957L415.036 202.353L147.72 469.645ZM486.626 130.769L426.348 191.042L320.962 85.646L381.225 25.376C387.271 19.331 395.318 16.001 403.88 16.001S420.489 19.331 426.535 25.376L486.626 85.472C499.106 97.957 499.106 118.278 486.626 130.769Z" />
+          </svg>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+          <path
+            d="M440 64H323.383L302.438 22.125C295.625 8.469 281.938 0 266.656 0H181.344C166.062 0 152.375 8.469 145.562 22.109L124.617 64H8C3.594 64 0 67.578 0 72S3.594 80 8 80H440C444.406 80 448 76.422 448 72S444.406 64 440 64ZM142.508 64L159.875 29.25C163.969 21.078 172.188 16 181.344 16H266.656C275.812 16 284.031 21.078 288.125 29.266L305.492 64H142.508ZM407.027 128C402.787 128 399.28 131.304 399.028 135.537L379.719 460.375C378.469 480.016 361.469 496 341.781 496H106.219C86.531 496 69.531 480.016 68.312 460.406L48.973 135.537C48.721 131.304 45.214 128 40.974 128C36.361 128 32.7 131.885 32.975 136.49L52.344 461.375C54.094 489.297 78.25 512 106.219 512H341.781C369.75 512 393.906 489.297 395.687 461.344L415.025 136.489C415.3 131.884 411.64 128 407.027 128Z" />
+          </svg>
+      </div>
     </div>
       
 </section>
