--- a/src/app/componentes/about-me/about-me.component.css
+++ b/src/app/componentes/about-me/about-me.component.css
@@ -1,11 +1,10 @@
 /*Sección About*/
 
 .about{
-    margin: 2rem 0;
-    padding: 3rem 0;
+    /* margin: 2rem 0; */
+    padding: 1rem 0;
     background: var(--cor-de-cards);
     color: var(--cor-de-letra);
-    background-image: linear-gradient(-131deg, #FCDFE7 0%, #FFE4C7 100%);
 }
 
 .about__container{
