--- a/src/app/componentes/profile/profile.component.css
+++ b/src/app/componentes/profile/profile.component.css
@@ -31,6 +31,16 @@
     margin-bottom: 0;
 }
 
+.title__network__item{
+    transition: all 300ms ease;
+    transform: scale(1);
+}
+
+.title__network__item:hover{
+    transform: scale(1.5);
+    border-color: rgba(0,0,0,0.1);
+}
+
 a{
     text-decoration: none;
     color: var(--cor-de-link);
@@ -78,7 +88,8 @@ a{
     }
 
     .title__network{
-        gap: 1rem;
+        justify-content: space-around;
+        gap: 2rem;
     }
 
     .title__img{
