--- a/src/app/componentes/profile/profile.component.html
+++ b/src/app/componentes/profile/profile.component.html
@@ -1,53 +1,62 @@
 <section class="title">
-    <div class="title__div" *ngIf="miPorfolio">
-        <div class="title__container">
-            <h2 class="title__bio">{{miPorfolio.titulo}}</h2>
-            <h3 class="title__subsection">{{miPorfolio.discription}}</h3>
-            <div>
-                <div class="icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M497.938 74.159L437.847 14.063C428.473 4.688 416.176 0 403.88 0S379.287 4.688 369.913 14.063L31.038 352.955C28.804 355.189 27.28 358.033 26.663 361.131L0.321 492.853C-1.707 502.966 6.16 512 15.949 512C16.996 512 18.066 511.896 19.148 511.68L150.857 485.335C153.954 484.716 156.798 483.194 159.032 480.962L497.938 142.084C516.687 123.317 516.687 92.91 497.938 74.159ZM147.72 469.645L16.007 495.992L42.35 364.27L309.646 96.957L415.036 202.353L147.72 469.645ZM486.626 130.769L426.348 191.042L320.962 85.646L381.225 25.376C387.271 19.331 395.318 16.001 403.88 16.001S420.489 19.331 426.535 25.376L486.626 85.472C499.106 97.957 499.106 118.278 486.626 130.769Z"/></svg>
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M440 64H323.383L302.438 22.125C295.625 8.469 281.938 0 266.656 0H181.344C166.062 0 152.375 8.469 145.562 22.109L124.617 64H8C3.594 64 0 67.578 0 72S3.594 80 8 80H440C444.406 80 448 76.422 448 72S444.406 64 440 64ZM142.508 64L159.875 29.25C163.969 21.078 172.188 16 181.344 16H266.656C275.812 16 284.031 21.078 288.125 29.266L305.492 64H142.508ZM407.027 128C402.787 128 399.28 131.304 399.028 135.537L379.719 460.375C378.469 480.016 361.469 496 341.781 496H106.219C86.531 496 69.531 480.016 68.312 460.406L48.973 135.537C48.721 131.304 45.214 128 40.974 128C36.361 128 32.7 131.885 32.975 136.49L52.344 461.375C54.094 489.297 78.25 512 106.219 512H341.781C369.75 512 393.906 489.297 395.687 461.344L415.025 136.489C415.3 131.884 411.64 128 407.027 128Z"/></svg>
-                </div>
-            </div>
-            <ul class="title__network">
-                <!-- Enlaces de redes sociales -->
-                <li class="title__network__item">
-                    <a href="https://github.com/Leangon" target="_blank"><i class="fa-brands fa-github"></i>
-                    </a>
-                </li>
-                <li class="title__network__item">
-                    <a href="https://www.linkedin.com/in/leandro-gonza/" target="_blank"><i class="fa-brands fa-linkedin"></i>
-                    </a>
-                </li>
-                <li class="title__network__item">
-                    <a href="https://www.instagram.com/leamgonza/" target="_blank"><i class="fa-brands fa-instagram"></i>
-                    </a>
-                </li>
-                <li class="title__network__item">
-                    <a href="https://twitter.com/LeandroGonh" target="_blank"><i class="fa-brands fa-twitter"></i>
-                    </a>
-                </li>
-                <li class="title__network__item">
-                    <a href="https://twitter.com/LeandroGonh" target="_blank"><li class="title__network__item">
-                        <a href="https://wa.link/2727e9" target="_blank"><i class="fa-brands fa-whatsapp"></i>
-                        </a>
-                    </li>
-                    </a>
-                </li>
-                <li class="title__network__item">
-                    <a href="../../../assets/images/LeandroGonzález.pdf" target="_blank"><i class="fa-solid fa-file"></i>
-                    </a>
-                </li>
-            </ul>
+  <div class="title__div" *ngIf="miPorfolio">
+    <div class="title__container">
+      <h2 class="title__bio">{{miPorfolio.titulo}}</h2>
+      <h3 class="title__subsection">{{miPorfolio.discription}}</h3>
+      <div>
+        <div class="icon">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+            <path
+              d="M497.938 74.159L437.847 14.063C428.473 4.688 416.176 0 403.88 0S379.287 4.688 369.913 14.063L31.038 352.955C28.804 355.189 27.28 358.033 26.663 361.131L0.321 492.853C-1.707 502.966 6.16 512 15.949 512C16.996 512 18.066 511.896 19.148 511.68L150.857 485.335C153.954 484.716 156.798 483.194 159.032 480.962L497.938 142.084C516.687 123.317 516.687 92.91 497.938 74.159ZM147.72 469.645L16.007 495.992L42.35 364.27L309.646 96.957L415.036 202.353L147.72 469.645ZM486.626 130.769L426.348 191.042L320.962 85.646L381.225 25.376C387.271 19.331 395.318 16.001 403.88 16.001S420.489 19.331 426.535 25.376L486.626 85.472C499.106 97.957 499.106 118.278 486.626 130.769Z" />
+            </svg>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+            <path
+              d="M440 64H323.383L302.438 22.125C295.625 8.469 281.938 0 266.656 0H181.344C166.062 0 152.375 8.469 145.562 22.109L124.617 64H8C3.594 64 0 67.578 0 72S3.594 80 8 80H440C444.406 80 448 76.422 448 72S444.406 64 440 64ZM142.508 64L159.875 29.25C163.969 21.078 172.188 16 181.344 16H266.656C275.812 16 284.031 21.078 288.125 29.266L305.492 64H142.508ZM407.027 128C402.787 128 399.28 131.304 399.028 135.537L379.719 460.375C378.469 480.016 361.469 496 341.781 496H106.219C86.531 496 69.531 480.016 68.312 460.406L48.973 135.537C48.721 131.304 45.214 128 40.974 128C36.361 128 32.7 131.885 32.975 136.49L52.344 461.375C54.094 489.297 78.25 512 106.219 512H341.781C369.75 512 393.906 489.297 395.687 461.344L415.025 136.489C415.3 131.884 411.64 128 407.027 128Z" />
+            </svg>
         </div>
-        
-        <div class="title__img">
-            <img class="title__profile" [src]="miPorfolio.image">
-            <div class="icon">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M497.938 74.159L437.847 14.063C428.473 4.688 416.176 0 403.88 0S379.287 4.688 369.913 14.063L31.038 352.955C28.804 355.189 27.28 358.033 26.663 361.131L0.321 492.853C-1.707 502.966 6.16 512 15.949 512C16.996 512 18.066 511.896 19.148 511.68L150.857 485.335C153.954 484.716 156.798 483.194 159.032 480.962L497.938 142.084C516.687 123.317 516.687 92.91 497.938 74.159ZM147.72 469.645L16.007 495.992L42.35 364.27L309.646 96.957L415.036 202.353L147.72 469.645ZM486.626 130.769L426.348 191.042L320.962 85.646L381.225 25.376C387.271 19.331 395.318 16.001 403.88 16.001S420.489 19.331 426.535 25.376L486.626 85.472C499.106 97.957 499.106 118.278 486.626 130.769Z"/></svg>
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M440 64H323.383L302.438 22.125C295.625 8.469 281.938 0 266.656 0H181.344C166.062 0 152.375 8.469 145.562 22.109L124.617 64H8C3.594 64 0 67.578 0 72S3.594 80 8 80H440C444.406 80 448 76.422 448 72S444.406 64 440 64ZM142.508 64L159.875 29.25C163.969 21.078 172.188 16 181.344 16H266.656C275.812 16 284.031 21.078 288.125 29.266L305.492 64H142.508ZM407.027 128C402.787 128 399.28 131.304 399.028 135.537L379.719 460.375C378.469 480.016 361.469 496 341.781 496H106.219C86.531 496 69.531 480.016 68.312 460.406L48.973 135.537C48.721 131.304 45.214 128 40.974 128C36.361 128 32.7 131.885 32.975 136.49L52.344 461.375C54.094 489.297 78.25 512 106.219 512H341.781C369.75 512 393.906 489.297 395.687 461.344L415.025 136.489C415.3 131.884 411.64 128 407.027 128Z"/></svg>
-            </div>
-        </div>
-        
+      </div>
+      <!-- Enlaces de redes sociales -->
+      <ul class="title__network">
+        <li class="title__network__item">
+          <a href="https://github.com/Leangon" target="_blank"><i class="fa-brands fa-github"></i>
+          </a>
+        </li>
+        <li class="title__network__item">
+          <a href="https://www.linkedin.com/in/leandro-gonza/" target="_blank"><i class="fa-brands fa-linkedin"></i>
+          </a>
+        </li>
+        <li class="title__network__item">
+          <a href="https://www.instagram.com/leamgonza/" target="_blank"><i class="fa-brands fa-instagram"></i>
+          </a>
+        </li>
+        <li class="title__network__item">
+          <a href="https://twitter.com/LeandroGonh" target="_blank"><i class="fa-brands fa-twitter"></i>
+          </a>
+        </li>
+        <li class="title__network__item">
+          <a href="https://wa.link/2727e9" target="_blank"><i class="fa-brands fa-whatsapp"></i>
+          </a>
+        </li>
+        <li class="title__network__item">
+          <a href="../../../assets/images/LeandroGonzález.pdf" target="_blank"><i class="fa-solid fa-file"></i>
+          </a>
+        </li>
+      </ul>
     </div>
+
+    <div class="title__img">
+      <img class="title__profile" [src]="miPorfolio.image">
+      <div class="icon">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+          <path
+            d="M497.938 74.159L437.847 14.063C428.473 4.688 416.176 0 403.88 0S379.287 4.688 369.913 14.063L31.038 352.955C28.804 355.189 27.28 358.033 26.663 361.131L0.321 492.853C-1.707 502.966 6.16 512 15.949 512C16.996 512 18.066 511.896 19.148 511.68L150.857 485.335C153.954 484.716 156.798 483.194 159.032 480.962L497.938 142.084C516.687 123.317 516.687 92.91 497.938 74.159ZM147.72 469.645L16.007 495.992L42.35 364.27L309.646 96.957L415.036 202.353L147.72 469.645ZM486.626 130.769L426.348 191.042L320.962 85.646L381.225 25.376C387.271 19.331 395.318 16.001 403.88 16.001S420.489 19.331 426.535 25.376L486.626 85.472C499.106 97.957 499.106 118.278 486.626 130.769Z" />
+          </svg>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+          <path
+            d="M440 64H323.383L302.438 22.125C295.625 8.469 281.938 0 266.656 0H181.344C166.062 0 152.375 8.469 145.562 22.109L124.617 64H8C3.594 64 0 67.578 0 72S3.594 80 8 80H440C444.406 80 448 76.422 448 72S444.406 64 440 64ZM142.508 64L159.875 29.25C163.969 21.078 172.188 16 181.344 16H266.656C275.812 16 284.031 21.078 288.125 29.266L305.492 64H142.508ZM407.027 128C402.787 128 399.28 131.304 399.028 135.537L379.719 460.375C378.469 480.016 361.469 496 341.781 496H106.219C86.531 496 69.531 480.016 68.312 460.406L48.973 135.537C48.721 131.304 45.214 128 40.974 128C36.361 128 32.7 131.885 32.975 136.49L52.344 461.375C54.094 489.297 78.25 512 106.219 512H341.781C369.75 512 393.906 489.297 395.687 461.344L415.025 136.489C415.3 131.884 411.64 128 407.027 128Z" />
+          </svg>
+      </div>
+    </div>
+    <mat-divider></mat-divider>
+  </div>
 </section>
