Actualización de angular -v

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,7 @@
 
       <!-- Sección de Experiencia Profesional/Proyectos-->
     <app-projects></app-projects>
+    <mat-divider></mat-divider>
       <!-- Sección de Contacto -->
     <app-contact></app-contact>
 
