--- a/src/app/componentes/btn-goup/btn-goup.component.css
+++ b/src/app/componentes/btn-goup/btn-goup.component.css
@@ -8,7 +8,7 @@
     z-index: 1;
 }
 
-.button-gou:hover{
-    transform: scale(2);
+.button-goup:hover{
+    transform: scale(4);
     border-color: rgba(0,0,0,0.1);
 }
