--- a/src/app/componentes/btn-goup/btn-goup.component.html
+++ b/src/app/componentes/btn-goup/btn-goup.component.html
@@ -1,2 +1,2 @@
-<button type="button" class="btn btn-outline-primary btn-lg button-goup" id="button"><i class="fa-solid fa-circle-chevron-up"></i></button>
+<button type="button" class="btn btn-primary btn-lg button-goup" id="button"><i class="fa-solid fa-circle-chevron-up"></i></button>
 
