--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,5 +1,5 @@
 <h1 mat-dialog-title>Inicio de sesión</h1>
-<div mat-dialog-content class="div">
+<mat-dialog-content class="div">
   <form class="form-group" [formGroup]="form" (ngSubmit)="onEnviar($event)">
     <div class="mb-4">
       <label class="form-label" for="email">Email:</label>
@@ -19,8 +19,8 @@
         <p *ngIf="Password?.errors?.minlength" class="error">El password debe temer 8 o más caracteres.</p>
       </div>
     </div>
-    <div  mat-dialog-actions class="d-flex justify-content-center">
-      <button type="submit" class="btn btn-primary" cdkFocusInitial>Iniciar sesión</button>
-    </div>
+    <mat-dialog-actions class="d-grid">
+      <button type="submit" class="btn btn-outline-success" cdkFocusInitial><i class="fa-thin fa-right-to-bracket"></i> Iniciar sesión</button>
+    </mat-dialog-actions>
   </form>  
-</div>
+</mat-dialog-content>
